[options]

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=200

[flake8]
ignore = E203, E266, E501, W503, E722
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[mypy]
python_version=3.7
files=stb
ignore_missing_imports=True

[black]
line_lenght=200